--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-23  Roland Winkler  <winkler@gnu.org>
+
+	* ibuf-ext.el (ibuffer-switch-to-saved-filter-groups): If list
+	ibuffer-saved-filter-groups has one element, shortcut the call of
+	completing-read.  (Bug#12331)
+
 2012-09-23  Chong Yidong  <cyd@gnu.org>
 
 	* bindings.el (mode-line-toggle-read-only):
