--- a/etc/NEWS
+++ b/etc/NEWS
@@ -411,6 +411,8 @@ server properties.
 ** In Perl mode, new option `perl-indent-parens-as-block' causes non-block
 closing brackets to be aligned with the line of the opening bracket.
 
+** In Proced mode, new command `proced-renice' renices selected processes.
+
 ** Python mode
 
 A new version of python.el, which provides several new features, including:
