--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,12 @@
 2012-09-23  Roland Winkler  <winkler@gnu.org>
 
+	* textmodes/bibtex.el (bibtex-autokey-transcriptions): Transcribe
+	also LaTeX hyphenation.
+	(bibtex-reformat): Bug fix. Do not quote twice the elements of
+	bibtex-reformat-previous-options.
+
+2012-09-23  Roland Winkler  <winkler@gnu.org>
+
 	* proced.el (proced-renice-command): New variable.
 	(proced-marked-processes): New function.
 	(proced-with-processes-buffer): New macro.
