Clean-up left-overs after revision 110152 wrt signal handling.
 src/.gdbinit: Set breakpoint on terminate_due_to_signal, not on
 fatal_error_backtrace.
 src/w32proc.c (sys_kill): Undo last change: don't do anything when
 invoked to deliver SIGABRT to our own process.  This is now
 handled by emacs_raise.

 nt/inc/ms-w32.h (emacs_raise): Redefine to invoke emacs_abort.

--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-23  Eli Zaretskii  <eliz@gnu.org>
+
+	* inc/ms-w32.h (emacs_raise): Redefine to invoke emacs_abort.
+
 2012-09-23  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Simplify and avoid signal-handling races (Bug#12471).
