--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,22 @@
+2012-09-23  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in (BLOCKINPUT_H): Remove.
+	(SYSSIGNAL_H): New macro.
+	($(BLD)/alloc.$(O), $(BLD)/atimer.$(O), $(BLD)/buffer.$(O))
+	($(BLD)/callproc.$(O), $(BLD)/data.$(O), $(BLD)/dired.$(O))
+	($(BLD)/dispnew.$(O), $(BLD)/editfns.$(O), $(BLD)/emacs.$(O))
+	($(BLD)/eval.$(O), $(BLD)/fileio.$(O), $(BLD)/floatfns.$(O))
+	($(BLD)/fns.$(O), $(BLD)/fontset.$(O), $(BLD)/frame.$(O))
+	($(BLD)/fringe.$(O), $(BLD)/image.$(O), $(BLD)/insdel.$(O))
+	($(BLD)/keyboard.$(O), $(BLD)/keymap.$(O), $(BLD)/lread.$(O))
+	($(BLD)/menu.$(O), $(BLD)/w32inevt.$(O), $(BLD)/w32proc.$(O))
+	($(BLD)/print.$(O), $(BLD)/process.$(O), $(BLD)/ralloc.$(O))
+	($(BLD)/search.$(O), $(BLD)/sound.$(O), $(BLD)/sysdep.$(O))
+	($(BLD)/term.$(O), $(BLD)/window.$(O), $(BLD)/xdisp.$(O))
+	($(BLD)/xfaces.$(O), $(BLD)/w32fns.$(O), $(BLD)/w32menu.$(O))
+	($(BLD)/w32term.$(O), $(BLD)/w32select.$(O), $(BLD)/w32reg.$(O))
+	($(BLD)/w32xfns.$(O)): Update dependencies.
+
 2012-09-23  Eli Zaretskii  <eliz@gnu.org>
 
 	* .gdbinit: Set breakpoint on terminate_due_to_signal, not on
