--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-24  Glenn Morris  <rgm@gnu.org>
+
+	* eval.c (Frun_hook_with_args, Frun_hook_with_args_until_success)
+	(Frun_hook_with_args_until_failure): Doc fixes.
+
 2012-09-21  Chong Yidong  <cyd@gnu.org>
 
 	* image.c (define_image_type): Avoid adding duplicate types to
