Remove several obsolete vars and functions unlikely to be still in use.
* lisp/vc/log-edit.el (cvs-changelog-full-paragraphs)
(cvs-commit-buffer-require-final-newline): Obsolete variables
removed.

* lisp/font-lock.el (font-lock-reference-face): Use
define-obsolete-variable-alias.

* lisp/international/mule.el (set-char-table-default): Remove.
(set-coding-priority, make-coding-system, generic-char-p)
(charset-list, charset-bytes, charset-id): Use declare to mark
obsolete.

* lisp/mail/supercite.el (sc-version): Remove obsolete function.
(sc-describe): Don't mark as obsolete, since it is bound.
(sc-submit-bug-report): Remove.

* lisp/progmodes/compile.el (compile-internal): Remove obsolete
function.
(compilation-parse-errors-function): Fix typo.

* lisp/vc/emerge.el (emerge-mode): Make it an obsolete alias.
(emerge-version): Remove.

* lisp/vc/pcvs-defs.el (cvs-buffer-name-alist)
(cvs-invert-ignore-marks): Remove references to obsolete vars.
* lisp/vc/vc-hooks.el (vc-default-registered): Don't use
vc-master-templates.

* lisp/vc/pcvs-defs.el (cvs-diff-buffer-name, cvs-diff-ignore-marks)
* lisp/vc/vc-hooks.el (vc-ignore-vc-files, vc-master-templates)
* lisp/vc/vc.el (vc-checkout-carefully): Likewise.

* src/chartab.c (Fset_char_table_default): Obsolete function removed.

--- a/etc/NEWS
+++ b/etc/NEWS
@@ -660,6 +660,18 @@ are deprecated and will be removed eventually.
 *** `facemenu-unlisted-faces'
 *** `rmail-decode-mime-charset'
 *** `last-input-char', `last-command-char', `unread-command-char'.
+*** `iswitchb-read-buffer'
+*** `sc-version', `sc-submit-bug-report'
+*** `set-char-table-default'
+*** `compile-internal'
+*** `cvs-commit-buffer-require-final-newline'
+(use `'log-edit-require-final-newline'instead)
+*** `cvs-changelog-full-paragraphs'
+(use `log-edit-changelog-full-paragraphs' instead)
+*** `cvs-diff-ignore-marks', `cvs-diff-buffer-name'
+*** `vc-ignore-vc-files' (use `vc-handled-backends' instead)
+*** `vc-master-templates' (use `vc-handled-backends' instead)
+*** `vc-checkout-carefully'
 
 
 * Lisp changes in Emacs 24.3
