* progmodes/python.el: (python-shell-send-buffer): Better handling of "if __name__ == '__main__':" conditionals when sending the buffer.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-24  Fabián Ezequiel Gallina  <fgallina@cuca>
+
+	* progmodes/python.el:
+	(python-shell-send-buffer): Better handling of "if __name__ ==
+	'__main__':" conditionals when sending the buffer.
+
 2012-09-24  Glenn Morris  <rgm@gnu.org>
 
 	* eshell/esh-cmd.el (eshell-find-alias-function):
